--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs", "cairo", "pango", "libjpeg", "giflib", "librsvg", "pixman", "fontconfig", "freefont_ttf"]
+nixPkgs = ["nodejs", "cairo", "pango", "libjpeg", "giflib", "librsvg", "pixman", "fontconfig", "freefont_ttf", "dejavu_fonts", "liberation_ttf", "noto-fonts"]
 
 [phases.install]
 cmds = ["npm install"]
